[package]
name = "png2aa-web"
version = "0.1.2"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
image2aa = "0.1.3"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
rusoto_core = "0.32.0"
rusoto_credential = "0.11.0"
rusoto_s3 = "0.32.0"
