[package]
name = "image2aa_web"
version = "0.1.2"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
image2aa = "0.1.3"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rocket_contrib = "0.3.10"
rusoto_core = "0.32.0"
rusoto_credential = "0.11.0"
rusoto_s3 = "0.32.0"
image = "0.19.0"
dotenv = "0.11.0"
time = "*"
sha3 = "0.7.3"
imageproc = "0.15.0"
rusttype = "0.5.2"
rand = "0.4.2"