[package]
name = "image2aa_web"
version = "0.1.3"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
image2aa = { path = '../image2aa' }
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
image = "0.23.6"
dotenv = "0.11.0"
time = "*"
sha3 = "0.7.3"
imageproc = "0.22.0"
rusttype = "0.9.2"
rand = "0.4.2"
